# laser-runner-cutter

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  Tracker.py  USDA_util.py  cv_utils.py  heliosdac.rules  install_ml_model.sh  install_requirements.sh  laser.py  main.py  package.xml  realsense.py  ros2.code-workspace  run_usda_util.sh  setup.cfg  setup.py  setup.sh
control_node/: package.xml  setup.cfg  setup.py
control_node/config/: base_configs.yaml  parameters.yaml
control_node/control_node/: Tracker.py  calibration.py  requirements.txt  tracker.py
control_node/control_node/nodes/: control_node.py
control_node/launch/: launch.py
ros2/aioros2/: LICENSE.txt  README.md  pyproject.toml
ros2/aioros2/_ref_nodes/: amiga_control_node.py  circular_node.py
ros2/aioros2/_ref_nodes/launch/: amiga_control_launch.py
ros2/aioros2/aioros2/: __init__.py  aioros2.py  async_driver.py  client_driver.py  deferrable.py  deferrable_accessor.py  exception.py  launch.py  launch_driver.py  lazy_accessor.py  result.py  returnable.py  ros_node.py  server_driver.py  util.py
ros2/aioros2/aioros2/decorators/: __init__.py  _decorators.py  action.py  deferrable_accessor.py  import_node.py  lazy_accessor.py  node.py  param.py  param_subscription.py  params.py  self.py  service.py  start.py  subscribe.py  timer.py  topic.py
ros2/aioros2/aioros2/directives/: __init__.py  action.py  directive.py  params.py  service.py  start.py  subscribe.py  subscribe_param.py  timer.py  topic.py  use_node.py
ros2/aioros2/aioros2/old/: __init__.py  aioros2.py  async_driver.py  client_driver.py  launch_driver.py  returnable.py  server_driver.py  util.py
ros2/amiga_control_interfaces/: CMakeLists.txt  package.xml
ros2/amiga_control_interfaces/action/: Run.action
ros2/amiga_control_interfaces/srv/: SetTwist.srv
ros2/camera_control_cpp/: CMakeLists.txt  package.xml
ros2/camera_control_cpp/calibration_params/: helios_distortion_coeffs.yml  helios_intrinsic_matrix.yml  helios_to_triton_extrinsic_matrix.yml  pythonExtrinsics.npy  triton_distortion_coeffs.yml  triton_intrinsic_matrix.yml  triton_to_helios_extrinsic_matrix.yml  xyz_to_helios_extrinsic_matrix.yml  xyz_to_triton_extrinsic_matrix.yml
ros2/camera_control_cpp/launch/: launch.py
ros2/camera_control_cpp/src/: camera_control_node.cpp
ros2/camera_control_cpp/src/camera/: calibrate.cpp  calibration.cpp  lucid_camera.cpp  lucid_frame.cpp
ros2/camera_control_cpp/src/detector/: circle_detector.cpp  laser_detector.cpp
ros2/camera_control_cpp/src/tools/: calibrate.cpp  detect_circle.cpp  detect_laser.cpp  lucid_calibrate.cpp  test_color_to_depth_pixel_coord.cpp  test_getPosition.cpp
ros2/detection_cpp/: CMakeLists.txt  README.md  package.xml
ros2/detection_cpp/include/detection_cpp/: detection_node.hpp
ros2/detection_cpp/launch/: launch.py
ros2/detection_cpp/models/: .gitignore
ros2/detection_cpp/scripts/: build_engine.sh  build_opencv.sh
ros2/detection_cpp/src/: detection_node.cpp
ros2/detection_cpp/src/tools/: build_engine.py  engine_test.py  fp16_utils.cu  test_loop.cpp  test_singleFrame.cpp  yolo_genEngine.py  yolo_genOnnx.py
ros2/gstreamer_webrtc/: package.xml  setup.cfg  setup.py
ros2/gstreamer_webrtc/gstreamer_webrtc/: gstreamer_node.py  gstreamer_to_webrtc.py  server.py  webrtc_html.html
ros2/gstreamer_webrtc/launch/: launch.py
ros2/laser_control_cpp/: CMakeLists.txt  package.xml
ros2/laser_control_cpp/launch/: launch.py
ros2/laser_control_cpp/src/: laser_control_node.cpp
ros2/laser_control_cpp/src/dacs/: ether_dream.cpp  helios.cpp
ros2/laser_control_cpp/src/laser_dac/: ether_dream.cpp  helios.cpp
ros2/runner_cutter_control/: CMakeLists.txt  package.xml  requirements.txt  setup.py
ros2/runner_cutter_control/config/: parameters.yaml
ros2/runner_cutter_control/include/runner_cutter_control/: common_types.hpp
ros2/runner_cutter_control/launch/: launch.py  rosbridge_websocket_launch.xml
ros2/runner_cutter_control/runner_cutter_control/: calibration.py  camera_context.py  predictor.py  runner_cutter_control_node.py  single_process_runner.py  tracker.py
ros2/runner_cutter_control/src/: runner_cutter_control_node.cpp
ros2/runner_cutter_control/src/calibration/: calibration.cpp  point_correspondences.cpp
ros2/runner_cutter_control/src/clients/: camera_control_client.cpp  laser_control_client.cpp
ros2/runner_cutter_control/src/prediction/: average_velocity_predictor.cpp  kalman_filter_predictor.cpp  last_known_predictor.cpp  predictor.cpp
ros2/runner_cutter_control/src/tools/: test_calibration.cpp  test_predictor.cpp
ros2/runner_cutter_control_cpp/: CMakeLists.txt  package.xml
ros2/runner_cutter_control_cpp/launch/: launch.py  rosbridge_websocket_launch.xml  web_video_server_launch.py
ros2/runner_cutter_control_cpp/src/: runner_cutter_control_node.cpp
ros2/src/camera_control_cpp/: CMakeLists.txt  package.xml
ros2/src/common/: CMakeLists.txt  package.xml
ros2/src/detection/: CMakeLists.txt  README.md  package.xml
ros2/src/detection/launch/: launch.py
ros2/tensorrt_cpp/: CMakeLists.txt  README.md  package.xml
ros2/tensorrt_cpp/scripts/: build_opencv.sh
ros2/webrtc_ros2_py/: package.xml  setup.cfg  setup.py
ros2/webrtc_ros2_py/launch/: launch.py  launch_test.py
ros2/webrtc_ros2_py/webrtc_ros2_py/: test_video_frame_publisher_node.py  webrtc_node.py
rqt_laser_runner_removal/: package.xml  plugin.xml  setup.cfg  setup.py
rqt_laser_runner_removal/resource/: rqt_laser_runner_removal.ui
rqt_laser_runner_removal/rqt_laser_runner_removal/: rqt_laser_runner_removal.py
runner_image_capture_amiga_kivy/: README.md  manifest.json  setup.cfg
runner_image_capture_amiga_kivy/libs/amiga_client/: amiga_client.py
runner_image_capture_amiga_kivy/libs/camera/: realsense.py
runner_image_capture_amiga_kivy/libs/camera_streamer/: ops.py
runner_image_capture_amiga_kivy/libs/metadata_provider/: metadata_provider.py
runner_image_capture_amiga_kivy/src/: main.py
runner_image_capture_amiga_kivy/src/res/: main.kv
runner_image_capture_amiga_kivy/test/: test_dummy.py
(+2214 files in other folders)
