<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_laser_runner_removal</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kondo.genki@gmail.com">genki</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
